# service-control

./: .bandit  .coverage  .env.default  .env.dist  .gitignore  .isort.cfg  .pylintrc  Dockerfile  LICENSE.md  Makefile  Pipfile  README.md  docker-compose.yml  mypy.ini  otel-local-config.yaml  prometheus.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
app/: manage.py  schemas.py  wsgi.py
app/access/: admin.py  api.py  models.py  schemas.py
app/access/migrations/: 0001_initial.py  0002_user_deleted_at.py  0003_user_user_id.py  0004_alter_user_username.py  0005_user_created_user_updated.py  0007_alter_roleaccess_actions.py  (+2 more)
app/admin/: views.py
app/bod/: apps.py  models.py
app/cognito/: apps.py
app/common/: exceptions.py  test_client.py
app/config/: api.py  asgi.py  database_router.py  logging-cfg-local.yaml  logging.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  settings_test.py  test_checker.py  test_runner.py  urls.py  wsgi.py
app/controller/: admin.py  models.py
app/distributions/: admin.py  api.py  apps.py  export_models.py  models.py  schemas.py
app/middlewares/: oauth2_proxy_middleware.py
app/provider/: admin.py  api.py  apps.py  models.py  schemas.py
app/tests/: conftest.py  test_database_router.py
app/utils/: authentication.py  command.py  database_router.py  exceptions.py  fields.py  header.py  language.py  logging.py  otel.py  schemify.py  short_id.py  soft_delete_model.py  testing.py  translation.py
app/verified_permissions/: api.py  apps.py  urls.py
app/verifiedpermissions/: apps.py
(+103 files in other folders)
